[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/Tribe1Troop1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/TopBarResourceFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/GUI/PanelReportsTroopCol.gd" type="Script" id=3]

[node name="PanelReportsTroopCol" type="VBoxContainer"]
margin_right = 25.0
margin_bottom = 91.0
rect_min_size = Vector2( 50, 0 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 1 )
stretch_mode = 4

[node name="AmountBefore" type="Label" parent="."]
margin_top = 34.0
margin_right = 50.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1

[node name="AmountAfter" type="Label" parent="."]
margin_top = 68.0
margin_right = 50.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1
valign = 1
